WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212156
[Mac,WK2] Fullscreen animation missing a few frames at beginning
https://bugs.webkit.org/show_bug.cgi?id=212156
Summary
[Mac,WK2] Fullscreen animation missing a few frames at beginning
Jer Noble
Reported
2020-05-20 11:28:24 PDT
Fullscreen animation missing a few frames at beginning
Attachments
Patch
(5.91 KB, patch)
2020-05-20 11:43 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing
(8.69 KB, patch)
2020-05-27 11:46 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-05-20 11:32:56 PDT
<
rdar://problem/54799415
>
Jer Noble
Comment 2
2020-05-20 11:43:52 PDT
Created
attachment 399863
[details]
Patch
Eric Carlson
Comment 3
2020-05-21 14:42:42 PDT
Comment on
attachment 399863
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=399863&action=review
> Source/WebKit/ChangeLog:9 > + When starting the animation, ensure that the fullscreen window is ordered front, and on top
s/the animation/the enter fullscreen animation/
> Source/WebKit/UIProcess/mac/WKFullScreenWindowController.mm:325 > + [clipLayer addAnimation:zoomAnimation(_initialFrame, _finalFrame, self.window.screen.frame, 1e10, AnimateIn) forKey:@"fullscreen"]; > + clipLayer.mask = createMask(contentView.bounds); > + [clipLayer.mask addAnimation:maskAnimation(_initialFrame, _finalFrame, self.window.screen.frame, 1e10, AnimateIn) forKey:@"fullscreen"];
`1e10` probably deserves a named constant to make it clear why we use it.
Jer Noble
Comment 4
2020-05-27 11:46:55 PDT
Created
attachment 400360
[details]
Patch for landing Addressed Eric's comments. Rather than giving the duration an arbitrarily long duration, we just give the animations a duration value of 1 and a speed of 0.
EWS
Comment 5
2020-05-29 16:03:50 PDT
Committed
r262322
: <
https://trac.webkit.org/changeset/262322
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400360
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug